--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ a:hover {
 	text-transform: uppercase;
 	font-weight: 600;
     color: #666;
-    min-height: 70px;
+    min-height: 85px;
 }
 @media only screen and (max-width: 500px) {
     .credit {
@@ -107,7 +107,8 @@ a:hover {
 	text-transform: uppercase;
 	font-weight: 300;
     color: #ddd;
-    background-color: rgb(0, 47, 167)
+    background-color: rgb(0, 47, 167);
+    border-radius: 0 0 5px 5px;
 }
 .cta-list1 {
     float: left;
@@ -133,7 +134,7 @@ h1 {
 	font-weight: 300;
 	letter-spacing: .02em;
 	line-height: 1.3em;
-	margin-bottom: 120px;
+	margin-bottom: 80px;
 	position: absolute;
   	bottom: 0;
   	left: 0;
@@ -160,6 +161,12 @@ h4 {
 	letter-spacing: .02em;
 	line-height: 1.5em;
 	padding: 0 20px;
+}
+.title {
+	font-family: 'Open Sans';
+	font-size: 1em;
+	font-weight: 700;
+	letter-spacing: .02em;
 }
 #h3-bold {
 	font-weight: 400;
@@ -197,7 +204,13 @@ input[type='checkbox'] {
   border-radius: 5px;
   margin-top: 20px;
 }
-
+.project-card {
+	border-width: 1px 1px 0 1px;
+  border-style: solid;
+  border-radius: 5px;
+  border-color: #ddd;
+  margin-bottom: 50px;
+}
 .lbl-toggle2 {
   display: block;
   cursor: pointer;
@@ -207,10 +220,57 @@ input[type='checkbox'] {
   max-height: 0px;
   overflow: hidden;
   transition: max-height .5s ease-in-out;
+  border: 0 solid #ddd;
 }
 .toggle:checked + .lbl-toggle2 + .collapsible-content2 {
-  max-height: 350px;
+  max-height: 800px;
+  margin-top: 20px;
+}
+.lbl-toggle3 {
+  display: block;
+  cursor: pointer;
+  transition: all 1s ease-out;
+}
+.collapsible-content3 {
+  max-height: 0px;
+  overflow: hidden;
+  transition: max-height .5s ease-in-out;
+  border: 0 solid #ddd;
+}
+.toggle:checked + .lbl-toggle3 + .collapsible-content3 {
+  max-height: 800px;
+  margin-top: 20px;
 }
 .wrap-collabsible {
 	margin-bottom: 50px;
+}
+.footer {
+	display: block;
+    float: left;
+    padding: 50px 0 0 0;
+    font-family: 'Rubik';
+    font-size: .7em;
+    letter-spacing: .1em;
+	text-transform: uppercase;
+	font-weight: 300;
+    color: #666;
+}
+.footer-list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.footer-item {
+    float: left;
+    margin: 0;
+    padding: 0px 20px 0 0;
+    font-family: 'Open Sans';
+    font-size: 1em;
+    letter-spacing: .1em;
+	text-transform: uppercase;
+	font-weight: 400;
+    color: #666;
+    min-height: 85px;
 }
