--- a/02/css/work.css
+++ b/02/css/work.css
@@ -188,8 +188,27 @@ display : none;
 	border-radius: 3rem;
 	padding: .2rem .3rem .2rem .5rem;
 }
+.playpause:hover {
+	border: .05rem solid #808080;
+	background-color: #000;
+	color: #dddddd;
+	-webkit-box-shadow: 0px 10px 20px 0px rgba(50, 50, 50, 0.25);
+	-moz-box-shadow:    0px 10px 20px 0px rgba(50, 50, 50, 0.25);
+	box-shadow:         0px 10px 20px 0px rgba(50, 50, 50, 0.25);
+	transition: ease-in-out 0.3s;
+}
+
+/*.playpause:active {
+	background-color: #808080;
+	color: #000000;
+	-webkit-box-shadow: 0px 5px 10px 0px rgba(50, 50, 50, 0);
+	-moz-box-shadow:    0px 5px 10px 0px rgba(50, 50, 50, 0);
+	box-shadow:         0px 5px 10px 0px rgba(50, 50, 50, 0);
+	transition: ease-in-out 0.3s;
+}*/
+
 .key-benefit-item1 {
-   background-image: url('file:///Users/ismaelsanchez/Sites/Portfolio/media/enterprise-site/icons/01.png');
+   background-image: url('../media/enterprise-site/icons/01.png');
    height: 64px;
    width: 64px;
    background-repeat: no-repeat;
@@ -211,7 +230,7 @@ display : none;
 	transition: ease-in-out 0.3s;
 }
 .key-benefit-item2 {
-   background-image: url('file:///Users/ismaelsanchez/Sites/Portfolio/media/enterprise-site/icons/02.png');
+   background-image: url('../media/enterprise-site/icons/02.png');
    height: 64px;
    width: 64px;
    background-repeat: no-repeat;
@@ -233,7 +252,7 @@ display : none;
 	transition: ease-in-out 0.3s;
 }
 .key-benefit-item3 {
-   background-image: url('file:///Users/ismaelsanchez/Sites/Portfolio/media/enterprise-site/icons/03.png');
+   background-image: url('../media/enterprise-site/icons/03.png');
    height: 64px;
    width: 64px;
    background-repeat: no-repeat;
@@ -255,7 +274,7 @@ display : none;
 	transition: ease-in-out 0.3s;
 }
 .key-benefit-item4 {
-   background-image: url('file:///Users/ismaelsanchez/Sites/Portfolio/media/enterprise-site/icons/04.png');
+   background-image: url('../media/enterprise-site/icons/04.png');
    height: 64px;
    width: 64px;
    background-repeat: no-repeat;
@@ -277,7 +296,7 @@ display : none;
 	transition: ease-in-out 0.3s;
 }
 .key-benefit-item5 {
-   background-image: url('file:///Users/ismaelsanchez/Sites/Portfolio/media/enterprise-site/icons/05.png');
+   background-image: url('../media/enterprise-site/icons/05.png');
    height: 64px;
    width: 64px;
    background-repeat: no-repeat;
@@ -299,7 +318,7 @@ display : none;
 	transition: ease-in-out 0.3s;
 }
 .key-benefit-item6 {
-   background-image: url('file:///Users/ismaelsanchez/Sites/Portfolio/media/enterprise-site/icons/06.gif');
+   background-image: url('../media/enterprise-site/icons/06.gif');
    height: 64px;
    width: 64px;
    background-repeat: no-repeat;
@@ -321,7 +340,7 @@ display : none;
 	transition: ease-in-out 0.3s;
 }
 .key-benefit-item7 {
-   background-image: url('file:///Users/ismaelsanchez/Sites/Portfolio/media/enterprise-site/icons/07.gif');
+   background-image: url('../media/enterprise-site/icons/07.gif');
    height: 64px;
    width: 64px;
    background-repeat: no-repeat;
@@ -343,7 +362,7 @@ display : none;
 	transition: ease-in-out 0.3s;
 }
 .key-benefit-item8 {
-   background-image: url('file:///Users/ismaelsanchez/Sites/Portfolio/media/enterprise-site/icons/08.gif');
+   background-image: url('../media/enterprise-site/icons/08.gif');
    height: 64px;
    width: 64px;
    background-repeat: no-repeat;
@@ -365,7 +384,7 @@ display : none;
 	transition: ease-in-out 0.3s;
 }
 .key-benefit-item9 {
-   background-image: url('file:///Users/ismaelsanchez/Sites/Portfolio/media/enterprise-site/icons/09.png');
+   background-image: url('../media/enterprise-site/icons/09.png');
    height: 64px;
    width: 64px;
    background-repeat: no-repeat;
@@ -387,7 +406,7 @@ display : none;
 	transition: ease-in-out 0.3s;
 }
 .key-benefit-item10 {
-   background-image: url('file:///Users/ismaelsanchez/Sites/Portfolio/media/enterprise-site/icons/10.png');
+   background-image: url('../media/enterprise-site/icons/10.png');
    height: 64px;
    width: 64px;
    background-repeat: no-repeat;
@@ -409,7 +428,7 @@ display : none;
 	transition: ease-in-out 0.3s;
 }
 .key-benefit-item11 {
-   background-image: url('file:///Users/ismaelsanchez/Sites/Portfolio/media/enterprise-site/icons/11.png');
+   background-image: url('../media/enterprise-site/icons/11.png');
    height: 64px;
    width: 64px;
    background-repeat: no-repeat;
